refactor: 迁移到自建服务器后端，移除云开发依赖
- 移除所有云开发相关代码和文件
  - 删除 cloudfunctions/ 目录（所有云函数）
  - 删除 cloudTipModal 组件
  - 删除 envList.js 和 uploadCloudFunction.sh
  - 清理 project.config.json 中的云开发配置

- 迁移到自建 Node.js + MySQL 后端
  - 使用 Express + MySQL2 替代云开发
  - 配置 API 基础路径为 https://drink.loner.cc/api
  - 使用 PM2 管理进程

- 启用 Skyline 渲染引擎
  - 添加 Skyline 配置和 glass-easel 组件框架
  - 优化首页动画效果（数字平滑、水位上升、按钮缩放）

- 新增后端服务代码
  - 完整的 Node.js API 服务
  - MySQL 数据库模型和路由
  - JWT 认证机制
  - 详细的部署文档和安装指南

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -12,5 +12,11 @@
   },
   "sitemapLocation": "sitemap.json",
   "style": "v2",
-  "lazyCodeLoading": "requiredComponents"
+  "lazyCodeLoading": "requiredComponents",
+  "renderer": "skyline",
+  "rendererOptions": {
+    "skyline": {
+      "defaultDisplayBlock": true
+    }
+  }
 }
