feat: 实现定时发布订阅消息功能
- 新增闹钟管理页面，支持添加、编辑、删除闹钟
- 新增用户资料编辑页面，支持修改昵称和头像
- 实现闹钟数据后端同步功能
- 创建闹钟数据库模型和API路由
- 实现定时任务调度器，每分钟检查到期闹钟并自动发送订阅消息
- 支持三种重复类型：每天、工作日、仅一次
- 更新订阅消息模板ID为实际模板ID
- 添加 .gitignore 文件忽略系统文件

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -3,7 +3,7 @@
     "urlCheck": true,
     "coverView": true,
     "lazyloadPlaceholderEnable": false,
-    "skylineRenderEnable": false,
+    "skylineRenderEnable": true,
     "preloadBackgroundData": false,
     "autoAudits": false,
     "useApiHook": true,
@@ -18,6 +18,6 @@
     "useIsolateContext": true
   },
   "condition": {},
-  "libVersion": "3.12.0",
+  "libVersion": "3.11.3",
   "projectname": "dirnkwater"
 }
