--- a/server/env.example
+++ b/server/env.example
@@ -1,7 +1,7 @@
 # ============================================
 # 服务器配置
 # ============================================
-PORT=3000
+PORT=3001
 NODE_ENV=production
 
 # ============================================
@@ -9,6 +9,16 @@ NODE_ENV=production
 # ============================================
 WX_APPID=wx850d1785f2817acd
 WX_SECRET=f0f4be0340319bcd29321e4f4f58efca
+
+# ============================================
+# 订阅消息配置
+# ============================================
+# 订阅消息模板ID（在微信公众平台创建模板后获取）
+# 参考文档：https://developers.weixin.qq.com/miniprogram/dev/framework/open-ability/subscribe-message.html
+SUBSCRIBE_TEMPLATE_ID=vi7txiPzgsN4Oo-wM8iNRc8ePcOtNpSdmAwiFTHYADE
+
+# 小程序版本（开发版：developer，正式版：formal，体验版：trial）
+MINIPROGRAM_STATE=developer
 
 # ============================================
 # JWT 密钥（用于生成和验证 token）
