--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,7 +1,9 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/mine/mine"
+    "pages/mine/mine",
+    "pages/profile/profile",
+    "pages/alarm/alarm"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
