--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^9.0.2",
     "axios": "^1.6.0",
     "mysql2": "^3.6.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
